kubernetes/apps/demo-app/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: apps-demo-app
spec:
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 8080    # TODO: match containerPort in deployment.yaml
  type: ClusterIP
